updated the url

--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
             <p class="subtitle">Stand out from the crowd with professional, ATS-friendly templates. No design skills needed—just your experience and our expertise.</p>
             
             <div class="hero-buttons">
-                <a href="/cvbuilder?type=cv" class="hero-button hero-button-cv" data-type="cv">
+                <a href="mainBuilder.html?type=cv" class="hero-button hero-button-cv" data-type="cv">
                     Start Building Your CV
                 </a>
             </div>
