--- a/mainBuilder.html
+++ b/mainBuilder.html
@@ -1,3 +1,8 @@
+---
+redirect_from:
+  - /cvbuilder
+  - /cvbuilder/
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +20,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://careercraft.com/cvbuilder">
+    <meta property="og:url" content="https://emnextech.github.io/careercraft/cvbuilder">
     <meta property="og:title" content="CareerCraft - CV Builder | Create Your Professional CV">
     <meta property="og:description" content="Build your professional CV with CareerCraft. Choose from multiple templates, customize colors and fonts, and export as Word document.">
     <meta property="og:image" content="assets/images/careercraft.png">
@@ -23,7 +28,7 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://careercraft.com/cvbuilder">
+    <meta property="twitter:url" content="https://emnextech.github.io/careercraft/cvbuilder">
     <meta property="twitter:title" content="CareerCraft - CV Builder | Create Your Professional CV">
     <meta property="twitter:description" content="Build your professional CV with CareerCraft. Choose from multiple templates, customize colors and fonts, and export as Word document.">
     <meta property="twitter:image" content="assets/images/careercraft.png">
@@ -73,7 +78,7 @@
                     <span></span>
                     <span></span>
                 </button>
-                <a href="/" class="back-button-navbar" title="Back to Home">
+                <a href="index.html" class="back-button-navbar" title="Back to Home">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10 12L6 8L10 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
