--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="format-detection" content="telephone=no">
+    <meta name="be6ee9a7ed0afadcef4bb3b0387af2c3024b901a" content="be6ee9a7ed0afadcef4bb3b0387af2c3024b901a" />
     
     <link rel="stylesheet" href="styles/base.css">
     <!-- Ad Script -->
